--- a/android/res/layout/name_preset.xml
+++ b/android/res/layout/name_preset.xml
@@ -13,45 +13,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingTop="20dp"
+    android:paddingLeft="24dp"
+    android:paddingRight="24dp"
+    android:paddingBottom="24dp"
     android:orientation="vertical"
     >
     <TextView
-        android:id="@+id/header"
-        android:text="@string/name_preset"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-    <TextView
-        android:id="@+id/config"
+        android:id="@+id/name_preset_config"
+        android:text=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/config"
         />
     <EditText
-        android:id="@+id/name"
+        android:id="@+id/preset_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:hint="@string/name_preset_hint"
         />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <Button
-            android:id="@+id/cancel"
-            android:text="@string/cancel"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
-        <Button
-            android:id="@+id/ok"
-            android:text="@string/ok"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
-    </LinearLayout>
 </LinearLayout>
