--- a/android/res/layout/name_profile.xml
+++ b/android/res/layout/name_profile.xml
@@ -11,7 +11,7 @@
     which can be found in the file LICENSE at the top level of the source code.
     -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="20dp"
     android:paddingLeft="24dp"
