--- a/android/res/menu/preset_context.xml
+++ b/android/res/menu/preset_context.xml
@@ -19,6 +19,10 @@
           android:icon="@drawable/ic_file_download_black_24dp"
           android:title="@string/add_inc"
           app:showAsAction="ifRoom"/>
+    <item android:id="@+id/action_add_trigger"
+          android:icon="@drawable/ic_settings_black_24dp"
+          android:title="@string/add_trigger"
+          app:showAsAction="ifRoom"/>
     <item android:id="@+id/action_del_preset"
           android:icon="@drawable/ic_delete_black_24dp"
           android:title="@string/del_preset"
