--- a/android/res/values/style.xml
+++ b/android/res/values/style.xml
@@ -32,4 +32,14 @@
         <item name="android:gravity">left</item>
         <item name="android:padding">4dip</item>
     </style>
+    <style name="input_label" parent="@android:style/TextAppearance.Small">
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingBottom">8dp</item>
+    </style>
+    <style name="input" parent="@android:style/TextAppearance.Medium">
+        <item name="android:paddingBottom">8dp</item>
+    </style>
+    <style name="input_help" parent="@android:style/TextAppearance.Small">
+        <item name="android:paddingBottom">8dp</item>
+    </style>
 </resources>
