--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -153,6 +153,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                style="?android:attr/buttonBarStyle"
                 >
                 <Button
                     android:id="@+id/reset"
@@ -160,6 +161,7 @@
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    style="?android:attr/buttonBarButtonStyle"
                     />
                 <Button
                     android:id="@+id/roll"
@@ -168,6 +170,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:focusableInTouchMode="true"
+                    style="?android:attr/buttonBarButtonStyle"
                     >
                     <requestFocus/>
                 </Button>
