--- a/android/res/values/style.xml
+++ b/android/res/values/style.xml
@@ -16,6 +16,9 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
     </style>
+    <style name="heading" parent="@android:style/TextAppearance.Large">
+        <item name="android:gravity">left</item>
+    </style>
     <style name="result" parent="@android:style/TextAppearance.Large">
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textStyle">bold</item>
