--- a/android/res/layout/dx.xml
+++ b/android/res/layout/dx.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="0"
         android:gravity="right"
-        android:inputType="number"
+        android:inputType="numberSigned"
         android:selectAllOnFocus="true"
         android:text="0"
         />
