--- a/android/res/layout-sw600dp/main.xml
+++ b/android/res/layout-sw600dp/main.xml
@@ -33,18 +33,7 @@
         android:paddingRight="8dp"
         android:baselineAligned="false"
         >
-        <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            >
-            <TableLayout
-                android:id="@+id/counters"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
-            </TableLayout>
-        </ScrollView>
+        <include layout="@layout/counters"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -53,40 +42,7 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             >
-            <TextView
-                android:id="@+id/config"
-                android:text="@string/empty_config"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/config"
-                />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:baselineAligned="false"
-                >
-                <TextView
-                    android:id="@+id/range_label"
-                    android:text="@string/range"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-                <TextView
-                    android:id="@+id/range"
-                    android:text=""
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    style="@style/range"
-                    />
-            </LinearLayout>
-            <ProgressBar
-                android:id="@+id/result_bar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="?android:attr/progressBarStyleHorizontal"
-                />
+            <include layout="@layout/config"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -136,110 +92,9 @@
                         />
                 </LinearLayout>
             </LinearLayout>
-            <LinearLayout
-                android:layout_weight="0"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:orientation="horizontal"
-                android:gravity="bottom"
-                >
-                <ImageView
-                    android:id="@+id/result_min"
-                    android:src="@drawable/ic_thumb_down_black_24dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:scaleType="center"
-                    android:visibility="invisible"
-                    />
-                <TextView
-                    android:id="@+id/result"
-                    android:text=""
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    style="@style/result"
-                    />
-                <ImageView
-                    android:id="@+id/result_max"
-                    android:src="@drawable/ic_thumb_up_black_24dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:scaleType="center"
-                    android:visibility="invisible"
-                    />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_weight="0"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:orientation="horizontal"
-                >
-                <TextView
-                    android:id="@+id/result_log1"
-                    android:text=""
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    style="@style/result_log1"
-                    />
-                <TextView
-                    android:id="@+id/result_log2"
-                    android:text=""
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    style="@style/result_log"
-                    />
-                <TextView
-                    android:id="@+id/result_log3"
-                    android:text=""
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    style="@style/result_log"
-                    />
-                <TextView
-                    android:id="@+id/result_log4"
-                    android:text=""
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    style="@style/result_log"
-                    />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_weight="0"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                style="?android:attr/buttonBarStyle"
-                >
-                <Button
-                    android:id="@+id/reset"
-                    android:text="@string/reset"
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="?android:attr/buttonBarButtonStyle"
-                    />
-                <Button
-                    android:id="@+id/roll"
-                    android:text="@string/roll"
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:focusableInTouchMode="true"
-                    style="?android:attr/buttonBarButtonStyle"
-                    >
-                    <requestFocus/>
-                </Button>
-            </LinearLayout>
+            <include layout="@layout/result"/>
+            <include layout="@layout/result_history"/>
+            <include layout="@layout/button_bar"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
